<?xml version="1.0"?>
<package format="2">
  <name>tb3_demo_camera</name>
  <version>1.1.0</version>
  <description>
    tb3_demo ROS package that controls Raspberry Pi Camera, and process the image
  </description>
  <license>Apache 2.0</license>
  <author email="ashekim@robotis.com">Ashe Kim</author>
  <author>Ashe Kim</author>
  <maintainer email="ashekim@robotis.com">Ashe Kim</maintainer>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/tb3_demo</url>
  <url type="emanual">http://tb3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/tb3_demo</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/tb3_demo/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>
</package>
