<?xml version="1.0"?>
<package format="2">
  <name>tb3_demo_msgs</name>
  <version>1.1.0</version>
  <description>The tb3_demo_msgs package
  </description>
  <license>Apache 2.0</license>
  <author email="ashekim@robotis.com">Ashe Kim</author>
  <author>Ashe Kim</author>
  <maintainer email="ashekim@robotis.com">Ashe Kim</maintainer>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/tb3_demo</url>
  <url type="emanual">http://tb3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/tb3_demo</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/tb3_demo/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
